--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 
 <head>
-    <title>Bizz - Business Consulting and Agency HTML Template </title>
+    <title>Academiczz</title>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Calling Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- Calling Favicon -->
     <!-- ********************* -->
     <!-- CSS files -->
