--- a/services.html
+++ b/services.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Bizz - Business Consulting and Agency HTML Template </title>
+    <title>Academiczz</title>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Calling Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- Calling Favicon -->
     <!-- ********************* -->
     <!-- CSS files -->
@@ -601,11 +601,11 @@
                 <div class="col-xl-8 col-lg-7 text-center text-lg-right z-5">
                     <a href="#"
                         class="btn btn-square-white mr-20 mr-xs-00 d-block d-sm-inline-block mb-xs-15 wow fadeInUp">
-                        <i class="fas fa-envelope mr-15"></i>info@example.com
+                        <i class="fas fa-envelope mr-15"></i>academiczz.info@gmail.com
                     </a>
                     <a href="tel:1234567890"
                         class="btn btn-square-green d-block d-sm-inline-block blob-small wow fadeInUp">
-                        <i class="fas fa-phone mr-15"></i>+1 234 567 890
+                        <i class="fas fa-phone mr-15"></i>+91 8746045849
                     </a>
                 </div>
             </div>
