first potion compleated

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                                     <a href="services.html">Services </a>
                                 </li>
                                 <li>
-                                    <a href="404.html">gallery </a>
+                                    <a href="career.html" >career </a>
                                 </li>
                                 <li>
                                     <a href="colleges.html">College </a>
@@ -441,11 +441,7 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-
-                                <li>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
@@ -459,8 +455,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">Gallery</a></li>
+                            <li><a href="career.html">Career</a></li>
                             <li><a href="colleges.html">Colleges</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
@@ -476,8 +471,6 @@
                             <li><a href="services.html">Application Processing</a></li>
                             <li><a href="services.html">Free Travel Assistance</a></li>
                             <li><a href="services.html">Scholarships</a></li>
-                            <li><a href="services.html">Seat Booking</a></li>
-                            <li><a href="services.html">College Comparison</a></li>
                         </ul>
                     </div>
                 </div>
