--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="contact-head phone flex-center d-none d-sm-flex">
                             <a class="black f-500" href="tel:1234567890">
-                                <i class="fas fa-phone green mr-15  mr-10"></i>+91 8746045849 
+                                <i class="fas fa-phone green mr-15  mr-10"></i>+91 8746045849
                             </a>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                                     <a href="services.html">Services </a>
                                 </li>
                                 <li>
-                                    <a href="404.html">gallery </a>
+                                    <a href="career.html" >career </a>
                                 </li>
                                 <li>
                                     <a href="colleges.html">College </a>
@@ -203,7 +203,7 @@
                 <div class="col-sm-4 text-center text-lg-left">
                     <div class="icon-box d-flex flex-column flex-lg-row align-items-center">
                         <div class="icon-img mr-20 mr-md-00 mb-md-10">
-                            <img src="img/feature/icon1.png" alt="Icon">
+                            <img src="img/career/4.png" alt="Icon">
                         </div>
                         <div class="icon-text">
                             <h5 class="f-700">Local Expertise</h5>
@@ -225,7 +225,7 @@
                 <div class="col-sm-4 text-center text-lg-left">
                     <div class="icon-box d-flex flex-column flex-lg-row align-items-center">
                         <div class="icon-img mr-20 mr-md-00 mb-md-10">
-                            <img src="img/feature/icon3.png" alt="Icon">
+                            <img src="img/feature/icon1.png" alt="Icon">
                         </div>
                         <div class="icon-text">
                             <h5 class="f-700">Comprehensive Support</h5>
@@ -286,11 +286,11 @@
                 <div class="col-lg-6 z-5 text-center text-lg-left wow fadeIn">
                     <div class="exp-cta pr-50 pr-lg-00">
                         <h1 class="white f-700 mb-10">
-                            <span class="green">25 Years</span> of Experience in the <span class="green">Industry</span>
+                            <span class="green">5 Years</span> of Experience in the <span class="green">Industry</span>
                         </h1>
                         <p class="white mb-55 mb-md-30 pr-60 pr-md-00">Quisque enim ipsum, commodo et venenatis rutrum,
                             luctus in enim. Quisque dapibus</p>
-                        <a href="#" class="btn btn-square  blob-small">Contact us
+                        <a href="colleges.html" class="btn btn-square  blob-small">Collages
                             <i class="fas fa-long-arrow-alt-right ml-20"></i>
                         </a>
                     </div>
@@ -299,26 +299,26 @@
                     <div class="row no-gutters">
                         <div class="col-sm-6 text-center">
                             <div class="each-count-up shade z-5 wow fadeIn" data-wow-delay=".2s">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">3000</span>+</h2>
-                                <p class="uppercase white mb-0">Satisfied Customers</p>
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">500</span>+</h2>
+                                <p class="uppercase white mb-0">Satisfied Student</p>
                             </div>
                         </div>
                         <div class="col-sm-6 text-center">
                             <div class="each-count-up z-5 wow fadeIn" data-wow-delay=".4s">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">250</span>+</h2>
-                                <p class="uppercase white mb-0">Awards Winner</p>
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">100</span>+</h2>
+                                <p class="uppercase white mb-0">Colleges</p>
                             </div>
                         </div>
                         <div class="col-sm-6 text-center">
                             <div class="each-count-up z-5 wow fadeIn" data-wow-delay=".6s">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">350</span>+</h2>
-                                <p class="uppercase white mb-0">Professionals</p>
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">400</span>+</h2>
+                                <p class="uppercase white mb-0">Placed to job</p>
                             </div>
                         </div>
                         <div class="col-sm-6 text-center">
                             <div class="each-count-up z-5 shade wow fadeIn" data-wow-delay=".8s">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">5300</span>+</h2>
-                                <p class="uppercase white mb-0">Projects Completed</p>
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">50</span>+</h2>
+                                <p class="uppercase white mb-0">International Reach</p>
                             </div>
                         </div>
                     </div>
@@ -468,7 +468,7 @@
     <!-- Faq area end -->
 
     <!-- Team area start -->
-    <section class="team-area pt-100 pb-70">
+    <!-- <section class="team-area pt-100 pb-70">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mb-30">
@@ -482,7 +482,7 @@
                             <h1 class="white mb-5">Meet Our Team</h1>
                             <p class="white mb-25">Pellentesque tempor ornare mal esuada. Mauris vel metus vel urna
                                 interdum</p>
-                            <a href="#" class="btn btn-square-white">View all
+                            <a href="contact.html" class="btn btn-square-white">contactc us
                                 <i class="fas fa-long-arrow-alt-right ml-15"></i>
                             </a>
                         </div>
@@ -538,13 +538,13 @@
                         style="background-image: url('img/team/career.jpg');" data-overlay="9">
                         <div class="career-text z-5">
                             <h5 class="f-700 white mb-20">Want to Join Our Team?</h5>
-                            <a href="#" class="btn btn-round-blue">CAREER</a>
+                            <a href="contact.html" class="btn btn-round-blue">get in touch</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Team area end -->
 
     <!-- Testimonial area start -->
@@ -597,7 +597,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-md-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client1.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 mb-10">
@@ -627,7 +627,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-md-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client2.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 mb-10">
@@ -658,7 +658,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-md-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client3.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 mb-10">
@@ -688,7 +688,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-md-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client1.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 mb-10">
@@ -718,7 +718,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-md-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client2.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 mb-10">
@@ -812,11 +812,11 @@
                 <div class="col-xl-8 col-lg-7 text-center text-lg-right z-5">
                     <a href="#"
                         class="btn btn-square-white mr-20 mr-xs-00 d-block d-sm-inline-block mb-xs-15 wow fadeInUp">
-                        <i class="fas fa-envelope mr-15"></i>info@example.com
+                        <i class="fas fa-envelope mr-15"></i>academiczz.info@gmail.com
                     </a>
                     <a href="tel:1234567890"
                         class="btn btn-square-green d-block d-sm-inline-block blob-small wow fadeInUp">
-                        <i class="fas fa-phone mr-15"></i>+1 234 567 890
+                        <i class="fas fa-phone mr-15"></i>+91 8746045849
                     </a>
                 </div>
             </div>
@@ -840,7 +840,7 @@
                                     560064 (pincode)
                                 </li>
                                 <li>
-                                    <i class="fas fa-phone green"></i>+91 8746045849
+                                    <i class="fas fa-phone green" href="tel:+918746045849"></i>+91 8746045849
                                 </li>
                                 <li>
                                     <i class="fas fa-envelope green"></i>academiczz.info@gmail.com
@@ -857,11 +857,7 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-
-                                <li>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
@@ -875,8 +871,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">Gallery</a></li>
+                            <li><a href="career.html">Career</a></li>
                             <li><a href="colleges.html">Colleges</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
@@ -892,8 +887,6 @@
                             <li><a href="services.html">Application Processing</a></li>
                             <li><a href="services.html">Free Travel Assistance</a></li>
                             <li><a href="services.html">Scholarships</a></li>
-                            <li><a href="services.html">Seat Booking</a></li>
-                            <li><a href="services.html">College Comparison</a></li>
                         </ul>
                     </div>
                 </div>
