--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                     <a href="services.html">Services </a>
                                 </li>
                                 <li>
-                                    <a href="404.html">gallery </a>
+                                    <a href="career.html" >career </a>
                                 </li>
                                 <li>
                                     <a href="colleges.html">College </a>
@@ -258,7 +258,7 @@
                 <div class="col-sm-4 text-center text-lg-left">
                     <div class="icon-box d-flex flex-column flex-lg-row align-items-center">
                         <div class="icon-img mr-20 mr-md-00 mb-md-10">
-                            <img src="img/feature/icon1.png" alt="Icon">
+                            <img src="img/career/4.png" alt="Icon">
                         </div>
                         <div class="icon-text">
                             <h5 class="f-700">Local Expertise</h5>
@@ -280,7 +280,7 @@
                 <div class="col-sm-4 text-center text-lg-left">
                     <div class="icon-box d-flex flex-column flex-lg-row align-items-center">
                         <div class="icon-img mr-20 mr-md-00 mb-md-10">
-                            <img src="img/feature/icon3.png" alt="Icon">
+                            <img src="img/feature/icon1.png" alt="Icon">
                         </div>
                         <div class="icon-text">
                             <h5 class="f-700">Comprehensive Support</h5>
@@ -314,14 +314,14 @@
                 <div class="col-xl-3 col-md-6 text-center">
                     <div class="service-list-3 shadow-2 transition-4 img-lined z-5">
                         <div class="icon-bg-white flex-center z-10">
-                            <img src="img/service/2.png" class="" alt="">
+                            <img src="img/career/4.png" class="" alt="noimage">
                         </div>
                         <div class="service-text-3 transition-4 mt-15 z-10">
                             <h4 class="f-700 mb-10">Personalized Direction</h4>
                             <p class="mb-20">Tailoring guidance to individual interests, skills, and ambitions for
                                 best-fit options.
                             </p>
-                            <a href="services-details.html" class="btn btn-border-blue mb-30">
+                            <a href="services.html" class="btn btn-border-blue mb-30">
                                 Readmore<i class="fas fa-long-arrow-alt-right ml-15"></i>
                             </a>
                             <span class="bg-green undeline-3"></span>
@@ -331,14 +331,14 @@
                 <div class="col-xl-3 col-md-6 text-center">
                     <div class="service-list-3 shadow-2 transition-4 img-lined z-5">
                         <div class="icon-bg-white flex-center z-10">
-                            <img src="img/service/1.png" class="" alt="">
+                            <img src="img/feature/icon2.png" class="" alt="noimage">
                         </div>
                         <div class="service-text-3 transition-4 mt-15 z-10">
                             <h4 class="f-700 mb-10">Admission Expertise</h4>
                             <p class="mb-20">Expert support in navigating competitive admissions, from tests to
                                 application crafting.
                             </p>
-                            <a href="services-details.html" class="btn btn-border-blue mb-30">
+                            <a href="services.html" class="btn btn-border-blue mb-30">
                                 Readmore<i class="fas fa-long-arrow-alt-right ml-15"></i>
                             </a>
                             <span class="bg-green undeline-3"></span>
@@ -348,14 +348,14 @@
                 <div class="col-xl-3 col-md-6 text-center">
                     <div class="service-list-3 shadow-2 transition-4 img-lined z-5">
                         <div class="icon-bg-white z-10 flex-center">
-                            <img src="img/service/3.png" class="" alt="">
+                            <img src="img/career/5.png " class="" alt="noimage">
                         </div>
                         <div class="service-text-3 mt-15 z-10">
                             <h4 class="f-700 mb-10">Insider Insights</h4>
                             <p class="mb-20">Leveraging ties for beneficial insider knowledge, aiding well-informed
                                 academic decisions.
                             </p>
-                            <a href="services-details.html" class="btn btn-border-blue mb-30">
+                            <a href="services.html" class="btn btn-border-blue mb-30">
                                 Readmore<i class="fas fa-long-arrow-alt-right ml-15"></i>
                             </a>
                             <span class="bg-green undeline-3"></span>
@@ -365,14 +365,14 @@
                 <div class="col-xl-3 col-md-6 text-center">
                     <div class="service-list-3 shadow-2 transition-4 img-lined z-5">
                         <div class="icon-bg-white z-10  flex-center">
-                            <img src="img/service/6.png" class="" alt="">
+                            <img src="img/service/1.png" class="" alt="noimage">
                         </div>
                         <div class="service-text-3 mt-15 z-10">
                             <h4 class="f-700 mb-10">Financial Clarity</h4>
                             <p class="mb-20">Offering insights into scholarships, financial aid, and program ROI
                                 understanding.
                             </p>
-                            <a href="services-details.html" class="btn btn-border-blue mb-30">
+                            <a href="services.html" class="btn btn-border-blue mb-30">
                                 Readmore<i class="fas fa-long-arrow-alt-right ml-15"></i>
                             </a>
                             <span class="bg-green undeline-3"></span>
@@ -432,7 +432,7 @@
     <!-- client logos end -->
 
     <!-- Team area start -->
-    <section class="team-area-3 pt-95 pb-70">
+    <!-- <section class="team-area-3 pt-95 pb-70">
         <div class="container">
             <div class="row align-items-end mb-45">
                 <div class="col-lg-7 col-md-12 text-center text-lg-left">
@@ -648,7 +648,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Team area end -->
 
 
@@ -696,7 +696,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-lg-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client1.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 text-left mb-10">
@@ -726,7 +726,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-lg-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client2.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 text-left mb-10">
@@ -758,7 +758,7 @@
                                     class="client-2-img d-flex align-items-center justify-content-lg-start justify-content-center">
                                     <div class="img-div mr-30 pb-10">
                                         <div class="client-image">
-                                            <img src="img/testimonial/client3.jpg" class=" rounded-circle" alt="">
+                                            <img src="img/mainImages/usershadow.jpg" class=" rounded-circle" alt="">
                                         </div>
                                     </div>
                                     <div class="client-text-2 text-left mb-10">
@@ -798,8 +798,8 @@
                 </div>
                 <div class="col-lg-3 col-sm-6 text-center">
                     <div class="counts-type-3">
-                        <h1 class="green f-900"><span class="counter">500</span>+</h1>
-                        <p>abcd</p>
+                        <h1 class="green f-900"><span class="counter">50</span>+</h1>
+                        <p>International Reach</p>
                     </div>
                 </div>
             </div>
@@ -809,20 +809,23 @@
 
 
     <!-- cta area start -->
-    <section class="cta pt-60 pt-md-45 pb-60" style="background-image: url('img/bg/bg_cta.jpg');" data-overlay="9">
+    <section class="cta pt-50 pb-50" style="background-image: url('img/bg/bg_cta.jpg');" data-overlay="9">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-5 col-lg-5 mb-md-20 text-center text-lg-left">
-                    <h3 class="z-5 white f-700 lh-18 wow fadeInLeft">Subscribe Our Newsletter</h3>
-                    <p class="white z-5 wow fadeInLeft">Stay Informed, Stay Ahead: Subscribe for Educational Updates</p>
+                <div class="col-xl-4 col-lg-5 mb-md-20 text-center text-lg-left">
+                    <h3 class="z-5 white f-700 lh-18 wow fadeInLeft">What type of challenge are you facing?
+                        <span class="green italic">Let’s talk</span>
+                    </h3>
                 </div>
-                <div class="col-xl-7 col-lg-7 text-center text-lg-right z-5">
-                    <form action="#" class="newsform d-flex flex-column flex-sm-row z-5 wow fadeInRight">
-                        <input class="form-control input-border mr-20" placeholder="Enter your email" type="email">
-                        <a href="#" class="btn btn-square">subscribe
-                            <i class="fas fa-long-arrow-alt-right ml-15"></i>
-                        </a>
-                    </form>
+                <div class="col-xl-8 col-lg-7 text-center text-lg-right z-5">
+                    <a href="#"
+                        class="btn btn-square-white mr-20 mr-xs-00 d-block d-sm-inline-block mb-xs-15 wow fadeInUp">
+                        <i class="fas fa-envelope mr-15"></i>academiczz.info@gmail.com
+                    </a>
+                    <a href="tel:1234567890"
+                        class="btn btn-square-green d-block d-sm-inline-block blob-small wow fadeInUp">
+                        <i class="fas fa-phone mr-15"></i>+91 8746045849
+                    </a>
                 </div>
             </div>
         </div>
@@ -862,11 +865,7 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-
-                                <li>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
@@ -880,8 +879,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">Gallery</a></li>
+                            <li><a href="career.html">Career</a></li>
                             <li><a href="colleges.html">Colleges</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
@@ -897,8 +895,6 @@
                             <li><a href="services.html">Application Processing</a></li>
                             <li><a href="services.html">Free Travel Assistance</a></li>
                             <li><a href="services.html">Scholarships</a></li>
-                            <li><a href="services.html">Seat Booking</a></li>
-                            <li><a href="services.html">College Comparison</a></li>
                         </ul>
                     </div>
                 </div>
