--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="contact-head phone flex-center d-none d-sm-flex">
                             <a class="black f-500" href="tel:1234567890">
-                                <i class="fas fa-phone green mr-15  mr-10"></i>+91 8746045849 
+                                <i class="fas fa-phone green mr-15  mr-10" href="tel:+918746045849"></i>+91 8746045849
                             </a>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                                     <a href="services.html">Services </a>
                                 </li>
                                 <li>
-                                    <a href="404.html">gallery </a>
+                                    <a href="career.html">career </a>
                                 </li>
                                 <li>
                                     <a href="colleges.html">College </a>
@@ -169,7 +169,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/1.png" class="transform-center" alt="">
+                            <img src="img/icons/next-page.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -186,7 +186,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/2.png" class="transform-center" alt="">
+                            <img src="img/icons/thumblike.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -202,7 +202,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/3.png" class="transform-center" alt="">
+                            <img src="img/icons/support.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -218,7 +218,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/4.png" class="transform-center" alt="">
+                            <img src="img/icons/applocation.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -235,7 +235,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/5.png" class="transform-center" alt="">
+                            <img src="img/icons/travelingcar.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -251,7 +251,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/6.png" class="transform-center" alt="">
+                            <img src="img/icons/scholarship.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -269,7 +269,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/6.png" class="transform-center" alt="">
+                            <img src="img/icons/seatbooking.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -288,7 +288,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/6.png" class="transform-center" alt="">
+                            <img src="img/icons/comparing.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
@@ -305,18 +305,17 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box type-2 transition-4 text-left relative img-lined mb-30">
                         <div class="service-icon-2 z-5">
-                            <img src="img/service/6.png" class="transform-center" alt="">
+                            <img src="img/icons/personalassitance.png" class="transform-center" alt="">
                         </div>
                         <div class="service-text">
                             <h4 class="f-700 mt-20 mb-10">
                                 <a href="#">
-                                    SCHOLARSHIPS</a>
+                                    Personalized Direction</a>
                             </h4>
-                            <p>We provide valuable information about various scholarships available to both Karnataka
-                                and non-Karnataka students"
-                                And the students who earned a good result in their 12th standard will give a good
-                                scholarship's
+                            <p>
+                                Personalized guidance for students' unique interests and skills, tailoring recommendations to ambitions for optimal educational choices.
                             </p>
+                            <br><br>
                             <a href="#" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
@@ -646,11 +645,9 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-
-                                <li>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a
+                                        href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                                            class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
@@ -664,8 +661,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">Gallery</a></li>
+                            <li><a href="career.html">Career</a></li>
                             <li><a href="colleges.html">Colleges</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
@@ -681,8 +677,6 @@
                             <li><a href="services.html">Application Processing</a></li>
                             <li><a href="services.html">Free Travel Assistance</a></li>
                             <li><a href="services.html">Scholarships</a></li>
-                            <li><a href="services.html">Seat Booking</a></li>
-                            <li><a href="services.html">College Comparison</a></li>
                         </ul>
                     </div>
                 </div>
