getin request added

--- a/about.html
+++ b/about.html
@@ -752,7 +752,7 @@
                         <p class="mb-35 pr-45 pr-md-00">Meet our trusted partners shaping your academic journey. Explore
                             the logos representing collaborations with institutions dedicated to your success. With
                             Academiczz and our esteemed partners, your path to success is streamlined and supported.</p>
-                        <a href="#" class="btn btn-square">View all<i class="fas fa-long-arrow-alt-right ml-20"></i></a>
+                        <a href="career.html" class="btn btn-square">View all<i class="fas fa-long-arrow-alt-right ml-20"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 mt-md-60 offset-xl-1 offset-lg-0">
