--- a/services.html
+++ b/services.html
@@ -179,7 +179,7 @@
                                 admission partnerships. Leverage our expertise in managing NRI quotas for a secure
                                 academic future.</p>
 
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                             <p>Experience fairness and affordability with our commitment to free services. Trust
                                 Academiczz for unbiased assistance, setting us apart from extravagant alternatives.</p>
                             <br>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                             <p>Day or night, we're here for you. Our round-the-clock support ensures assistance whenever
                                 you need it. Don't hesitate to reach out with questions or concerns.</p>
                             <br>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                             <p>Navigate the application process seamlessly with our expert admission facilitators.
                                 Receive comprehensive support for your desired colleges, courses, or competitive exams.
                             </p>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
                             <p>Enjoy a stress-free enrollment journey with our free travel assistance. We'll pick you up
                                 and drop you off, prioritizing your comfort and security during the admission process.
                             </p>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                                 Exceptional 12th-grade results bring additional scholarship opportunities.
                             </p>
                             <br><br>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
 
                             </p>
                             <br><br><br>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                             <p>Make informed decisions with our team's strategic comparative insights into colleges.
                                 Trust Academiczz for comprehensive details, aiding your well-considered final choices.
                             </p>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -313,10 +313,11 @@
                                     Personalized Direction</a>
                             </h4>
                             <p>
-                                Personalized guidance for students' unique interests and skills, tailoring recommendations to ambitions for optimal educational choices.
+                                Personalized guidance for students' unique interests and skills, tailoring
+                                recommendations to ambitions for optimal educational choices.
                             </p>
                             <br><br>
-                            <a href="#" class="btn btn-round mt-10">Learn More</a>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -325,60 +326,48 @@
     </section>
     <!-- Service end -->
     <!-- Request callback start -->
-    <section class="callback-area pt-95 pb-85" style="background-image: url('img/banner/banner_1.jpg');"
-        data-overlay="9">
+    <section class="callback-area pt-100 pb-95" style="background-image: url('img/banner/banner_1.jpg');" data-overlay="9">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="fancy-head text-center relative z-5 mb-40 wow fadeInDown">
-                        <h5 class="line-head mb-15 white">
-                            <span class="line before bg-white"></span>
-                            Contact Us
-                            <span class="line after bg-white"></span>
-                        </h5>
-                        <h1 class="white">Request a Call Back</h1>
+            <div class="row align-items-center">
+                <div class="col-lg-7 ">
+                    <div class="z-5 wow fadeInLeft">
+                        <h1 class="white f-700 mb-10 mb-sm-30">We’d Love to Here from You Our Teams Are Here to Help</h1>
+                        <ul class="check-list white mb-md-30">
+                            <li class="mb-10">
+                                <i class="far fa-check-square fs-17 mr-15"></i> Tailored advice for your unique goals and academic aspirations.
+                            </li>
+                            <li class="mb-10">
+                                <i class="far fa-check-square fs-17 mr-15"></i>Inquire about seamless admission, prestigious colleges, and expert guidance.
+                                <li>
+                                    <li class="mb-10">
+                                        <i class="far fa-check-square fs-17 mr-15"></i> 24/7 support for application queries, documentation, and general assistance.
+                                    </li>
+                                    <li>
+                                        <i class="far fa-check-square fs-17 mr-15"></i> Personalized call to explore scholarship opportunities based on academic achievements.
+                                    </li>
+                                    <li>
+                                        <i class="far fa-check-square fs-17 mr-15"></i>Secure guidance on seat reservation, college comparisons, and informed decisions.
+                                    </li>
+                        </ul>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-12">
-                    <form action="#" class="relative z-5  wow fadeInUp">
-                        <div class="row">
-                            <div class="col-xl-10 col-lg-12">
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <div class="form-group relative">
-                                            <input type="text" class="form-control input-white shadow-2" id="name"
-                                                placeholder="Name">
-                                            <i class="far fa-user transform-v-center"></i>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group relative">
-                                            <input type="email" class="form-control input-white shadow-2" id="email"
-                                                placeholder="Email">
-                                            <i class="far fa-envelope transform-v-center"></i>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group relative">
-                                            <input type="text" class="form-control input-white shadow-2" id="phone"
-                                                placeholder="Phone number">
-                                            <i class="fas fa-mobile-alt transform-v-center"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-2 col-lg-12">
-                                <button class="btn btn-blue btn-block request-btn uppercase shadow-2">submit</button>
-                            </div>
+                <div class="col-lg-5">
+                    <div class="video-present relative img-lined shadow-1 bg-blue z-1" data-overlay="4">
+                        <img src="img/feature/office_video.jpg" class="opacity-5 img-100" alt="">
+                        <div class="video-text transform-center">
+
+                            <h4 class="white f-700 mt-15">Ready to Transform Your Academic Future?</h4>
+                            <p class="white mt-5 mb-0">Click Below for More Information!</p>
+                            <a href="contact.html" class="btn btn-round mt-10">Learn More</a>
+
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Request callback end -->
+
 
     <!-- Faq area start -->
     <section class="faq-area relative">
@@ -513,9 +502,12 @@
                             <a href="https://www.youtube.com/watch?v=qtQgbdmIO30" class="popup-video"> <i
                                     class="fas fa-play"></i></a>
                         </div>
-                        <h1 class="white f-700 mt-35">How It Works</h1>
-                        <p class="white mt-10 mb-55">Quisque enim ipsum, commodo et venenatis rutrum, luctus in enim.
-                            Quisque dapibus lacus non pulvinar lobortis.</p>
+                        <h1 class="white f-700 mt-35">GET IN TOUCH TO LEARN MORE ?</h1>
+                        <p class="white mt-10 mb-55">Empowering students through expert guidance, Academiczz offers
+                            personalized counseling, exam preparation, and career-focused support across Kerala,
+                            Karnataka, and Tamil Nadu.</p>
+                            <a href="about.html" class="btn btn-round mt-10">Learn More</a>
+
                     </div>
                 </div>
             </div>
