--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                                     <a href="services.html">Services </a>
                                 </li>
                                 <li>
-                                    <a href="career.html" >career </a>
+                                    <a href="career.html">career </a>
                                 </li>
                                 <li>
                                     <a href="colleges.html">College </a>
@@ -288,8 +288,8 @@
                         <h1 class="white f-700 mb-10">
                             <span class="green">5 Years</span> of Experience in the <span class="green">Industry</span>
                         </h1>
-                        <p class="white mb-55 mb-md-30 pr-60 pr-md-00">Quisque enim ipsum, commodo et venenatis rutrum,
-                            luctus in enim. Quisque dapibus</p>
+                        <p class="white mb-55 mb-md-30 pr-60 pr-md-00">Drawing on a rich 5-year industry tenure, we
+                            bring expertise, reliability, and proven success to every client engagement.</p>
                         <a href="colleges.html" class="btn btn-square  blob-small">Collages
                             <i class="fas fa-long-arrow-alt-right ml-20"></i>
                         </a>
@@ -752,7 +752,8 @@
                         <p class="mb-35 pr-45 pr-md-00">Meet our trusted partners shaping your academic journey. Explore
                             the logos representing collaborations with institutions dedicated to your success. With
                             Academiczz and our esteemed partners, your path to success is streamlined and supported.</p>
-                        <a href="career.html" class="btn btn-square">View all<i class="fas fa-long-arrow-alt-right ml-20"></i></a>
+                        <a href="career.html" class="btn btn-square">View all<i
+                                class="fas fa-long-arrow-alt-right ml-20"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 mt-md-60 offset-xl-1 offset-lg-0">
@@ -857,7 +858,9 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
+                                    <a
+                                        href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                                            class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
