--- a/contact.html
+++ b/contact.html
@@ -274,14 +274,14 @@
     <section class="experience-cta pt-100 pb-100" style="background-image: url('img/bg/bg-2.jpg');" data-overlay="9">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 z-5 text-center text-lg-left">
+                <div class="col-lg-6 z-5 text-center text-lg-left wow fadeIn">
                     <div class="exp-cta pr-50 pr-lg-00">
                         <h1 class="white f-700 mb-10">
-                            <span class="green">25 Years</span> of Experience in the <span class="green">Industry</span>
+                            <span class="green">5 Years</span> of Experience in the <span class="green">Industry</span>
                         </h1>
-                        <p class="white mb-55 mb-md-30 pr-60 pr-md-00">Quisque enim ipsum, commodo et venenatis rutrum,
-                            luctus in enim. Quisque dapibus</p>
-                        <a href="#" class="btn btn-square ">Our Services
+                        <p class="white mb-55 mb-md-30 pr-60 pr-md-00">Drawing on a rich 5-year industry tenure, we
+                            bring expertise, reliability, and proven success to every client engagement.</p>
+                        <a href="colleges.html" class="btn btn-square  blob-small">Collages
                             <i class="fas fa-long-arrow-alt-right ml-20"></i>
                         </a>
                     </div>
@@ -289,27 +289,27 @@
                 <div class="col-lg-6 mt-md-60">
                     <div class="row no-gutters">
                         <div class="col-sm-6 text-center">
-                            <div class="each-count-up shade z-5">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">3000</span>+</h2>
-                                <p class="uppercase white mb-0">Satisfied Customers</p>
+                            <div class="each-count-up shade z-5 wow fadeIn" data-wow-delay=".2s">
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">500</span>+</h2>
+                                <p class="uppercase white mb-0">Satisfied Student</p>
                             </div>
                         </div>
                         <div class="col-sm-6 text-center">
-                            <div class="each-count-up z-5">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">250</span>+</h2>
-                                <p class="uppercase white mb-0">Awards Winner</p>
+                            <div class="each-count-up z-5 wow fadeIn" data-wow-delay=".4s">
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">100</span>+</h2>
+                                <p class="uppercase white mb-0">Colleges</p>
                             </div>
                         </div>
                         <div class="col-sm-6 text-center">
-                            <div class="each-count-up z-5">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">350</span>+</h2>
-                                <p class="uppercase white mb-0">Professionals</p>
+                            <div class="each-count-up z-5 wow fadeIn" data-wow-delay=".6s">
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">400</span>+</h2>
+                                <p class="uppercase white mb-0">Placed to job</p>
                             </div>
                         </div>
                         <div class="col-sm-6 text-center">
-                            <div class="each-count-up z-5 shade">
-                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">5300</span>+</h2>
-                                <p class="uppercase white mb-0">Projects Completed</p>
+                            <div class="each-count-up z-5 shade wow fadeIn" data-wow-delay=".8s">
+                                <h2 class="fs-40 f-900 green mb-20 mt-5"><span class="counter">50</span>+</h2>
+                                <p class="uppercase white mb-0">International Reach</p>
                             </div>
                         </div>
                     </div>
