edited the logo

--- a/colleges.html
+++ b/colleges.html
@@ -60,7 +60,7 @@
             <div class="row align-items-center no-gutters">
                 <div class="col-lg-2 col-md-5 col-sm-4 col-5">
                     <div class="logo transition-4">
-                        <a href="/">
+                        <a href="index.html">
                             <img src="img/mainImages/logo.png" class="transition-4" alt="logo">
                         </a>
                     </div>
