--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" class="color-changing" href="css/color.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <style>
+        @media only screen and (max-width: 767px) {
+            .silder-img {
+                background-image: url('img/banner/banner_2.jpg'); /* replace 'mobile_banner.jpg' with your mobile image path */
+            }
+        }
+    </style>
+    
     <!-- End CSS files -->
 </head>
 
@@ -58,7 +66,7 @@
             <div class="row align-items-center no-gutters">
                 <div class="col-lg-2 col-md-5 col-sm-4 col-5">
                     <div class="logo transition-4">
-                        <a href="/">
+                        <a href="index.html">
                             <img src="img/mainImages/logo.png" class="transition-4" alt="logo">
                         </a>
                     </div>
@@ -88,7 +96,7 @@
                                     <a href="services.html">Services </a>
                                 </li>
                                 <li>
-                                    <a href="career.html" >career </a>
+                                    <a href="career.html">career </a>
                                 </li>
                                 <li>
                                     <a href="colleges.html">College </a>
@@ -865,7 +873,9 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
+                                    <a
+                                        href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                                            class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
