index;ink changed

--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
                                 <i class="fas fa-search transform-v-center"></i>
                             </div>
                         </form>
-                        <p class="mb-35">Or go back to <a href="/" class="underline">homepage</a></p>
+                        <p class="mb-35">Or go back to <a href= "index.html" class="underline">homepage</a></p>
                     </div>
                 </div>
             </div>
