© Copyrights 2023 reserved By wexorai

--- a/career.html
+++ b/career.html
@@ -80,7 +80,7 @@
                         <nav class="main-menu main-menu-3 white">
                             <ul>
                                 <li>
-                                    <a href="index.html">Home </a>
+                                    <a href="/">Home </a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us </a>
@@ -619,7 +619,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-8">
-                        <p class="mb-0 white">© Copyrights 2023 reserved By Academiczz</p>
+                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a></p>
                     </div>
                     <div class="col-xl-4 text-right">
                         <a href="#" class="btn scroll-btn f-right flex-center z-25 opacity-0">
