--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="row align-items-center no-gutters">
                 <div class="col-lg-2 col-md-5 col-sm-4 col-5">
                     <div class="logo transition-4">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="img/mainImages/logo.png" class="transition-4" alt="logo">
                         </a>
                     </div>
