--- a/404.html
+++ b/404.html
@@ -8,6 +8,8 @@
     <meta charset="utf-8">
     <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
+
     <!-- Calling Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- Calling Favicon -->
@@ -73,7 +75,7 @@
                                 <i class="fas fa-search transform-v-center"></i>
                             </div>
                         </form>
-                        <p class="mb-35">Or go back to <a href= "/" class="underline">homepage</a></p>
+                        <p class="mb-35">Or go back to <a href="/" class="underline">homepage</a></p>
                     </div>
                 </div>
             </div>
