--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
+
+
     <!-- Calling Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- Calling Favicon -->
@@ -908,7 +911,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-8">
-                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a></p>
+                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a>
+                        </p>
                     </div>
                     <div class="col-xl-4 text-right">
                         <a href="#" class="btn scroll-btn f-right flex-center z-25 opacity-0">
