--- a/career.html
+++ b/career.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
+
     <!-- Calling Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <!-- Calling Favicon -->
@@ -571,7 +573,9 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
+                                    <a
+                                        href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                                            class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
@@ -582,7 +586,7 @@
                     <div class="footer-links pt-85 pt-md-50 mb-sm-70">
                         <h5 class="green f-700 mb-35">Quick Links</h5>
                         <ul class="links-list">
-                            <li><a href= "/">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="career.html">Career</a></li>
@@ -619,7 +623,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-8">
-                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a></p>
+                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a>
+                        </p>
                     </div>
                     <div class="col-xl-4 text-right">
                         <a href="#" class="btn scroll-btn f-right flex-center z-25 opacity-0">
