--- a/services.html
+++ b/services.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
+
     <!-- Calling Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- Calling Favicon -->
@@ -326,28 +328,35 @@
     </section>
     <!-- Service end -->
     <!-- Request callback start -->
-    <section class="callback-area pt-100 pb-95" style="background-image: url('img/banner/banner_1.jpg');" data-overlay="9">
+    <section class="callback-area pt-100 pb-95" style="background-image: url('img/banner/banner_1.jpg');"
+        data-overlay="9">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 ">
                     <div class="z-5 wow fadeInLeft">
-                        <h1 class="white f-700 mb-10 mb-sm-30">We’d Love to Here from You Our Teams Are Here to Help</h1>
+                        <h1 class="white f-700 mb-10 mb-sm-30">We’d Love to Here from You Our Teams Are Here to Help
+                        </h1>
                         <ul class="check-list white mb-md-30">
                             <li class="mb-10">
-                                <i class="far fa-check-square fs-17 mr-15"></i> Tailored advice for your unique goals and academic aspirations.
+                                <i class="far fa-check-square fs-17 mr-15"></i> Tailored advice for your unique goals
+                                and academic aspirations.
                             </li>
                             <li class="mb-10">
-                                <i class="far fa-check-square fs-17 mr-15"></i>Inquire about seamless admission, prestigious colleges, and expert guidance.
-                                <li>
-                                    <li class="mb-10">
-                                        <i class="far fa-check-square fs-17 mr-15"></i> 24/7 support for application queries, documentation, and general assistance.
-                                    </li>
-                                    <li>
-                                        <i class="far fa-check-square fs-17 mr-15"></i> Personalized call to explore scholarship opportunities based on academic achievements.
-                                    </li>
-                                    <li>
-                                        <i class="far fa-check-square fs-17 mr-15"></i>Secure guidance on seat reservation, college comparisons, and informed decisions.
-                                    </li>
+                                <i class="far fa-check-square fs-17 mr-15"></i>Inquire about seamless admission,
+                                prestigious colleges, and expert guidance.
+                            <li>
+                            <li class="mb-10">
+                                <i class="far fa-check-square fs-17 mr-15"></i> 24/7 support for application queries,
+                                documentation, and general assistance.
+                            </li>
+                            <li>
+                                <i class="far fa-check-square fs-17 mr-15"></i> Personalized call to explore scholarship
+                                opportunities based on academic achievements.
+                            </li>
+                            <li>
+                                <i class="far fa-check-square fs-17 mr-15"></i>Secure guidance on seat reservation,
+                                college comparisons, and informed decisions.
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -506,7 +515,7 @@
                         <p class="white mt-10 mb-55">Empowering students through expert guidance, Academiczz offers
                             personalized counseling, exam preparation, and career-focused support across Kerala,
                             Karnataka, and Tamil Nadu.</p>
-                            <a href="about.html" class="btn btn-round mt-10">Learn More</a>
+                        <a href="about.html" class="btn btn-round mt-10">Learn More</a>
 
                     </div>
                 </div>
@@ -650,7 +659,7 @@
                     <div class="footer-links pt-85 pt-md-50 mb-sm-70">
                         <h5 class="green f-700 mb-35">Quick Links</h5>
                         <ul class="links-list">
-                            <li><a href= "/">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="career.html">Career</a></li>
@@ -687,7 +696,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-8">
-                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a></p>
+                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a>
+                        </p>
                     </div>
                     <div class="col-xl-4 text-right">
                         <a href="#" class="btn scroll-btn f-right flex-center z-25 opacity-0">
