--- a/colleges.html
+++ b/colleges.html
@@ -7,6 +7,8 @@
     <meta charset="utf-8">
     <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
+
     <!-- Calling Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- Calling Favicon -->
@@ -90,7 +92,7 @@
                                     <a href="services.html">Services </a>
                                 </li>
                                 <li>
-                                    <a href="career.html" >career </a>
+                                    <a href="career.html">career </a>
                                 </li>
                                 <li class="active">
                                     <a href="colleges.html">College </a>
@@ -329,10 +331,11 @@
                             <h5 class="f-700 fs-19 mb-5 lh-15"><a href="#">Koshys Group of Institutions</a></h5>
                             <ul class="blog-by-detail mb-5">
                                 <li><a href="#">IN <span class="green">Bangalore, Karnataka, India</span> </a></li>
-                                <li><a href="#">Multidisciplinary Institution  </a></li>
+                                <li><a href="#">Multidisciplinary Institution </a></li>
                             </ul>
                             <div class="hr-1 opacity-1 mt-10 mb-10"></div>
-                            <p class="mb-0">Established in 2007,excels in various disciplines, awarded Best Promising B School in 2018. they will offer Management, Nursing, Allied Health
+                            <p class="mb-0">Established in 2007,excels in various disciplines, awarded Best Promising B
+                                School in 2018. they will offer Management, Nursing, Allied Health
                                 Science, Animation & Media Studies</p>
                         </div>
                     </div>
@@ -418,7 +421,7 @@
                             <h5 class="f-700 fs-19 mb-5 lh-15"><a href="#">Spurthy Group of Institutions</a></h5>
                             <ul class="blog-by-detail mb-5">
                                 <li><a href="#">IN <span class="green">Bangalore, Karnataka, India</span> </a></li>
-                                <li><a href="#">Health Care Management and Science  </a></li>
+                                <li><a href="#">Health Care Management and Science </a></li>
                             </ul>
                             <div class="hr-1 opacity-1 mt-10 mb-10"></div>
                             <p class="mb-0">Established in 2003, Spurthy Group focuses on creating leaders in healthcare
@@ -508,7 +511,9 @@
                                     <a href="https://wa.me/message/NQCDKP246RUJE1 "><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
+                                    <a
+                                        href="https://www.linkedin.com/in/academiczz-educational-consaltancy-2012082a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                                            class="fab fa-linkedin-in"></i></a>
                                 </li>
 
                             </ul>
@@ -519,7 +524,7 @@
                     <div class="footer-links pt-85 pt-md-50 mb-sm-70">
                         <h5 class="green f-700 mb-35">Quick Links</h5>
                         <ul class="links-list">
-                            <li><a href= "/">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="career.html">Career</a></li>
@@ -556,7 +561,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-8">
-                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a></p>
+                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a>
+                        </p>
                     </div>
                     <div class="col-xl-4 text-right">
                         <a href="#" class="btn scroll-btn f-right flex-center z-25 opacity-0">
