--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="utf-8">
     <meta name="description" content="The compleate solutions for students">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
+
     <!-- Calling Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- Calling Favicon -->
@@ -26,11 +28,12 @@
     <style>
         @media only screen and (max-width: 767px) {
             .silder-img {
-                background-image: url('img/banner/banner_2.jpg'); /* replace 'mobile_banner.jpg' with your mobile image path */
+                background-image: url('img/banner/banner_2.jpg');
+                /* replace 'mobile_banner.jpg' with your mobile image path */
             }
         }
     </style>
-    
+
     <!-- End CSS files -->
 </head>
 
@@ -886,7 +889,7 @@
                     <div class="footer-links pt-85 pt-md-50 mb-sm-70">
                         <h5 class="green f-700 mb-35">Quick Links</h5>
                         <ul class="links-list">
-                            <li><a href= "/">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="career.html">Career</a></li>
@@ -923,7 +926,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-8">
-                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a></p>
+                        <p class="mb-0 white">© Copyrights 2023 reserved By <a href="https://wexorai.com/">WexorAI</a>
+                        </p>
                     </div>
                     <div class="col-xl-4 text-right">
                         <a href="#" class="btn scroll-btn f-right flex-center z-25 opacity-0">
